# solhunter3

./: .env.example  .env.prod  .env.staging  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  PRIMARY_ENTRYPOINT  QUICK_START.md  README.md  STARTUP_NOTES.md  STATUS_MEMO.md  TESTING.md  base58.py  config.toml  demo.command  demo.py  devnet.command  devnet_tokens.txt  diagnostics.json  docker-compose.yml  dqn_model.pt  dqn_model.ptc  drill.out  dump.rdb  env_doctor.sh  hier_policy.json  macos_setup_report.json  mutation_state 2.json  mutation_state 3.json  mutation_state 4.json  mutation_state.json  mypy.ini  nohup.out  offline_data.db  paper.command  paper.py  portfolio.json  (+17 more)
.cache/: deps-installed  python-exe  torch_mps_ready
configs/: discovery_score_weights.yaml  test.toml
datasets/: offline_data.npz
depth_service/: Cargo.toml  build.rs
depth_service/src/: main.rs  route.rs  solhunter_zero.rs
docker/: mock-ui.Dockerfile
docs/: SLOs.md  acceptance_checklist.md  architecture.md  audit_status.md  blueprint.md  codex_sync_message.md  codex_ui_brief.md  config.md  das_search_assets_evaluation.md  data_contracts.md  demo_full_sample.md  environment.md  feature_flags.md  production_integration_plan.md  refactor_startup.md  runbook.md  runbook_generated.md  setup.md  ui_runtime_blueprint.md  ui_topic_map.md  usage.md
health/: soak_report.json  soak_run.out
jsonschema/: __init__.py  exceptions.py
keypairs/: assistant.json  cli.json  default.json  default.mnemonic  pool.json
proto/: event.proto
route_ffi/: Cargo.toml
scripts/: __init__.py  audit_placeholders.py  audit_placeholders.sh  auto_train_rl.py  benchmark_event_bus_batch.py  benchmark_event_bus_mmap.py  benchmark_rl_prep.py  benchmark_trade_dataset.py  build_mmap_dataset.py  bus_smoke.py  canary_staging.py  capture_daemon.py  ci_bundle_artifacts.py  clean_session.sh  cluster_setup.py  compression_demo.py  devnet_all_in_one.sh  devnet_do_all.sh  devnet_dryrun.sh  devnet_mint_and_swap.py  devnet_pool_swap.sh  devnet_simulated_swap.py  devnet_spl_mint.sh  devnet_swap_jup.py  discovery_health.py  env_doctor.py  event_bus_inspector.py  gen_proto.py  generate_chaos_runbook.py  health_soak.py  healthcheck.py  investor_demo.py  jupiter_swap.py  launch_live.sh  launcher.py  live_runtime_controller.py  mainnet_swap_jup_dryrun.py  mock_ui.py  online_train_ppo.py  online_train_transformer.py  (+27 more)
solana/: __init__.py
solhunter_zero/: __init__.py  _preflight.py  advanced_memory.py  agent_manager.py  amm_pool_watcher.py  arbitrage.py  autopilot.py  backtest_cli.py  backtester.py  build_utils.py  cache_paths.py  config.py  config_runtime.py  config_schema.py  connectivity.py  data_pipeline.py  data_sync.py  decision.py  depth_client.py  device.py  dex_config.py  diagnostics.py  discovery.py  discovery_state.py  dynamic_limit.py  (+94 more)
solhunter_zero.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+826 files in other folders)
