[package]
name = "depth_service"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
memmap2 = "0.9"
solana-client = "1.18"
solana-sdk = "1.18"
solana-program = "1.18"
base64 = "0.21"
bincode = "1"
chrono = { version = "0.4", features = ["serde"] }
prost = "0.12"
prost-types = "0.12"
toml = "0.8"
sysinfo = { version = "0.30" }
zstd = "0.13"

[build-dependencies]
prost-build = "0.12"
